--- a/AddRestuarant.html
+++ b/AddRestuarant.html
@@ -208,32 +208,64 @@
         </header>
 
         <aside class="left-sidebar">
-            <!-- Sidebar scroll-->
-            <div class="scroll-sidebar">
-                <!-- Sidebar navigation-->
-                <nav class="sidebar-nav">
-                    <ul id="sidebarnav" class="p-t-30">
+          <!-- Sidebar scroll-->
+          <div class="scroll-sidebar">
+              <!-- Sidebar navigation-->
+              <nav class="sidebar-nav">
+                  <ul id="sidebarnav" class="p-t-30">
 
                       <li class="sidebar-item">
-                        <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:Voids(0)" aria-expanded="false"><img src="assets/images/M.png"><span class="hide-menu ml-3">Enterprise Section</span></a>
-                        <ul aria-expanded="false" class="collapse  first-level">
-                            <li class="sidebar-item"><a href="index.html" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> Dashboard </span></a></li>
-                            <li class="sidebar-item"><a href="adminLevelUsers.html" class="sidebar-link"><i class="mdi mdi-multiplication-box"></i><span class="hide-menu"> User Managerment </span></a></li>
-                            <li class="sidebar-item"><a href="userAdminPermission.html" class="sidebar-link"><i class="mdi mdi-calendar-check"></i><span class="hide-menu">User Permission </span></a></li>
-                            <li class="sidebar-item"><a href="AddRestuarant.html" class="sidebar-link"><i class="mdi mdi-bulletin-board"></i><span class="hide-menu">+Add Resturant </span></a></li>
-                            <li class="sidebar-item"><a href="regionAdmin.html" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Regions </span></a></li>
-                            <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Menus </span></a></li>
-                            <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Compare </span></a></li>
-                            <li class="sidebar-item"><a href="settings.html" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Settings </span></a></li>
-                            <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Billings </span></a></li>
-                        </ul>
-                    </li>
-                    </ul>
-                </nav>
-                <!-- End Sidebar navigation -->
-            </div>
-            <!-- End Sidebar scroll-->
-        </aside>
+                          <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:Voids(0)" aria-expanded="false"><img src="assets/images/M.png"><span class="hide-menu ml-3">Enterprise Section</span></a>
+                          <ul aria-expanded="false" class="collapse  first-level ">
+                              <li class="sidebar-item"><a href="index.html" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> Dashboard </span></a></li>
+                              <li class="sidebar-item"><a href="adminLevelUsers.html" class="sidebar-link"><i class="mdi mdi-multiplication-box"></i><span class="hide-menu"> User Managerment </span></a></li>
+                              <li class="sidebar-item"><a href="userAdminPermission.html" class="sidebar-link"><i class="mdi mdi-calendar-check"></i><span class="hide-menu">User Permission </span></a></li>
+                              <li class="sidebar-item"><a href="AddRestuarant.html" class="sidebar-link"><i class="mdi mdi-bulletin-board"></i><span class="hide-menu">+Add Resturant </span></a></li>
+                              <li class="sidebar-item"><a href="regionAdmin.html" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Regions </span></a></li>
+                              <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Menus </span></a></li>
+                              <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Compare </span></a></li>
+                              <li class="sidebar-item"><a href="settings.html" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Settings </span></a></li>
+                              <li class="sidebar-item"><a href="#" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Billings </span></a></li>
+                          </ul>
+
+
+
+
+                          <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:Voids(0)" aria-expanded="false"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M5.00824 19.8205H3.42959C3.19394 19.8205 3 19.6287 3 19.3909V14.4423C3 14.2066 3.19186 14.0127 3.42959 14.0127H5.00824C5.24389 14.0127 5.43783 14.2046 5.43783 14.4423V19.3888C5.43783 19.6266 5.24389 19.8205 5.00824 19.8205ZM3.62562 19.1949H4.81012V14.6404H3.62562V19.1949Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.8629 19.9998H10.1383C9.61278 19.9998 9.18527 19.5723 9.18527 19.0468C9.18527 18.7924 9.28537 18.5525 9.46472 18.3732C9.64406 18.1938 9.88388 18.0938 10.1383 18.0938H11.8629C12.3884 18.0938 12.8159 18.5213 12.8159 19.0468C12.8159 19.5723 12.3884 19.9998 11.8629 19.9998ZM10.1383 18.7194C10.0507 18.7194 9.96938 18.7527 9.90682 18.8153C9.84426 18.8779 9.81089 18.9592 9.81089 19.0468C9.81089 19.2261 9.95687 19.3742 10.1383 19.3742H11.8629C12.0423 19.3742 12.1903 19.2282 12.1903 19.0468C12.1903 18.8674 12.0443 18.7194 11.8629 18.7194H10.1383Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.8629 18.7196H10.1383C9.94229 18.7196 9.75461 18.6612 9.59403 18.5486C9.33961 18.3713 9.18738 18.0793 9.18738 17.7665V17.7353C9.18738 17.2097 9.61488 16.7822 10.1404 16.7822H11.8629C12.3885 16.7822 12.816 17.2097 12.816 17.7353V17.7665C12.816 18.2921 12.3885 18.7196 11.8629 18.7196ZM10.1383 17.4099C9.95897 17.4099 9.81091 17.5559 9.81091 17.7373V17.7686C9.81091 17.875 9.86305 17.9751 9.95063 18.0376C10.0049 18.0752 10.0695 18.096 10.1383 18.096H11.8629C12.0423 18.096 12.1903 17.95 12.1903 17.7686V17.7373C12.1903 17.558 12.0444 17.4099 11.8629 17.4099H10.1383Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.8629 17.41H10.1383C9.61278 17.41 9.18527 16.9825 9.18527 16.457V16.4257C9.18527 15.9002 9.61278 15.4727 10.1383 15.4727H11.8629C12.3884 15.4727 12.8159 15.9002 12.8159 16.4257V16.457C12.8159 16.9825 12.3884 17.41 11.8629 17.41ZM10.1383 16.1004C9.95895 16.1004 9.81089 16.2463 9.81089 16.4278V16.459C9.81089 16.6384 9.95687 16.7865 10.1383 16.7865H11.8629C12.0423 16.7865 12.1903 16.6405 12.1903 16.459V16.4278C12.1903 16.2484 12.0443 16.1004 11.8629 16.1004H10.1383Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.8629 16.1004H10.1383C9.61278 16.1004 9.18527 15.6729 9.18527 15.1474C9.18527 14.8929 9.28537 14.6531 9.46472 14.4738C9.64406 14.2944 9.88388 14.1943 10.1383 14.1943H11.8629C12.3884 14.1943 12.8159 14.6218 12.8159 15.1474C12.8159 15.6729 12.3884 16.1004 11.8629 16.1004ZM10.1383 14.82C10.0507 14.82 9.96938 14.8533 9.90682 14.9159C9.84426 14.9784 9.81089 15.0598 9.81089 15.1474C9.81089 15.3267 9.95687 15.4748 10.1383 15.4748H11.8629C12.0423 15.4748 12.1903 15.3288 12.1903 15.1474C12.1903 14.968 12.0443 14.82 11.8629 14.82H10.1383Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M10.1383 20.0001H7.37098C7.18329 20.0001 6.99769 19.9667 6.82043 19.9021C6.64109 19.8354 6.47425 19.7394 6.33036 19.6143C6.16145 19.4704 5.94039 19.3891 5.70891 19.3891H4.81219V14.4467H5.58588C5.85489 14.4467 6.10931 14.3153 6.26572 14.0943L6.52222 13.7314C6.88299 13.2205 7.47107 12.916 8.09461 12.916H10.8703C10.9537 12.916 11.0392 12.9264 11.1205 12.9494C11.2811 12.9932 11.4271 13.0766 11.5439 13.1955C11.719 13.3706 11.817 13.6021 11.8233 13.8482C11.8296 14.1026 11.7315 14.3445 11.5522 14.528C11.3708 14.7136 11.1163 14.82 10.8578 14.82H8.67226L8.94753 17.9794H9.87136L9.95269 18.0357C10.0069 18.0732 10.0716 18.0941 10.1383 18.0941V18.7197C10.0507 18.7197 9.96938 18.753 9.90682 18.8156C9.84425 18.8782 9.81089 18.9595 9.81089 19.0471C9.81089 19.2264 9.95686 19.3745 10.1383 19.3745V20.0001ZM5.43781 18.7635H5.70891C6.09054 18.7635 6.45757 18.8969 6.7391 19.1388C6.82669 19.216 6.92887 19.2744 7.03731 19.314C7.14575 19.3536 7.25836 19.3745 7.37306 19.3745H9.24575C9.20821 19.2723 9.18735 19.1618 9.18735 19.0471C9.18735 18.8907 9.22489 18.7384 9.29579 18.605H8.80156C8.55757 18.605 8.35737 18.4215 8.33651 18.1775L8.00076 14.3153L8.2385 14.2382C8.33026 14.209 8.4241 14.1944 8.52003 14.1944H10.8536C10.9453 14.1944 11.035 14.1568 11.1017 14.0901C11.1643 14.0275 11.1977 13.9462 11.1956 13.8607C11.1935 13.7752 11.1601 13.696 11.0997 13.6376C11.058 13.5959 11.0079 13.5687 10.9537 13.5521C10.9266 13.5437 10.8974 13.5416 10.8682 13.5416H8.09461C7.67336 13.5416 7.27505 13.7481 7.03314 14.0922L6.77664 14.455C6.50345 14.8408 6.05926 15.0723 5.58588 15.0723H5.43781V18.7635Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M10.4991 19.3745H10.1383V20.0001H10.4991V19.3745Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M7.70881 15.9858L7.15826 15.6876L7.70255 14.6804C7.81725 14.4677 8.00702 14.3113 8.2385 14.2383L8.42827 14.8347C8.3532 14.8576 8.29063 14.9098 8.2531 14.9786L7.70881 15.9858Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M12.9202 12.2821L6.70992 12.2758C6.4847 12.2758 6.27407 12.1882 6.11558 12.0297C5.95709 11.8713 5.86951 11.6585 5.86951 11.4354L5.87368 7.21248C5.87368 6.98726 5.96126 6.77664 6.11975 6.61815C6.27824 6.45966 6.48887 6.37207 6.71409 6.37207C6.71409 6.37207 6.71409 6.37207 6.71618 6.37207L12.9265 6.37833L12.9202 12.2821ZM6.71618 6.99769C6.65779 6.99769 6.60565 7.02063 6.56394 7.06025C6.52224 7.09987 6.50138 7.15409 6.50138 7.21248L6.49721 11.4354C6.49721 11.4938 6.52015 11.548 6.55977 11.5876C6.5994 11.6273 6.65362 11.6502 6.71201 11.6502L12.2967 11.6565L12.303 7.00394L6.71618 6.99769Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M6.49512 11.4103L5.0708 11.4082C4.77675 11.4082 4.50148 11.2935 4.29503 11.085C4.08857 10.8765 3.97388 10.6012 3.97388 10.3071L3.97596 8.33227C3.97596 8.03823 4.09066 7.76296 4.2992 7.5565C4.50565 7.35005 4.78093 7.23535 5.07497 7.23535C5.07497 7.23535 5.07497 7.23535 5.07705 7.23535L6.50138 7.23744L6.49512 11.4103ZM5.07497 7.86097C4.81429 7.86097 4.60367 8.0716 4.60158 8.33227L4.5995 10.3071C4.5995 10.4343 4.64746 10.5511 4.73713 10.6408C4.8268 10.7305 4.94567 10.7784 5.0708 10.7805H5.8695L5.87367 7.85888L5.07497 7.86097Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M18.1442 15.6749C18.0586 15.6749 17.9752 15.652 17.9002 15.6061L12.2946 12.1443L12.3009 6.51583L17.9148 3.06868C18.0586 2.98109 18.238 2.97692 18.3861 3.05825C18.532 3.13958 18.6238 3.29598 18.6238 3.4649L18.6092 15.2078C18.6092 15.3767 18.5174 15.531 18.3694 15.6144C18.3006 15.654 18.2234 15.6749 18.1442 15.6749ZM12.9202 11.7961L17.9836 14.9221L17.9961 3.75269L12.9265 6.86618L12.9202 11.7961Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M10.7702 18.607L8.80156 18.6049C8.55756 18.6049 8.35737 18.4214 8.33651 18.1774L8.00076 14.3153L8.2385 14.2381C8.33026 14.2089 8.4241 14.1943 8.52003 14.1943H10.1383V14.82C10.0507 14.82 9.96938 14.8533 9.90681 14.9159C9.84425 14.9784 9.81089 15.0598 9.81089 15.1474C9.81089 15.3267 9.95686 15.4748 10.1383 15.4748V16.1004C9.95895 16.1004 9.81089 16.2464 9.81089 16.4278V16.4591C9.81089 16.6384 9.95686 16.7865 10.1383 16.7865V17.4121C9.95895 17.4121 9.81089 17.5581 9.81089 17.7395V17.7708C9.81089 17.8771 9.86302 17.9772 9.95061 18.0398L10.7702 18.607ZM8.94753 17.9793H9.21029C9.19361 17.9105 9.18735 17.8396 9.18735 17.7687V17.7374C9.18735 17.4913 9.2812 17.2661 9.43552 17.0972C9.2812 16.9283 9.18735 16.7031 9.18735 16.457V16.4257C9.18735 16.1796 9.2812 15.9544 9.43552 15.7855C9.2812 15.6166 9.18735 15.3914 9.18735 15.1453C9.18735 15.0327 9.20612 14.9221 9.24366 14.8179H8.67226L8.94753 17.9793Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.3479 13.6585L10.9537 13.5521C10.9266 13.5438 10.8974 13.5417 10.8682 13.5417H7.93406L7.76932 11.6523L11.352 11.6565L11.3479 13.6585ZM8.50755 12.9161H10.7243V12.2821L8.45124 12.28L8.50755 12.9161Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M21.5397 9.03006L20.1279 9.02783L20.1269 9.65345L21.5387 9.65568L21.5397 9.03006Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M20.8906 5.83459L20.558 5.30469L19.2827 6.10509L19.6153 6.63499L20.8906 5.83459Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M20.8852 12.8494L19.6122 12.0454L19.2781 12.5744L20.5512 13.3784L20.8852 12.8494Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              <path d="M11.2689 7.90019L7.97192 7.89648L7.97122 8.5221L11.2682 8.52581L11.2689 7.90019Z" fill="#546E7A" stroke="#546E7A" stroke-width="0.3"/>
+                              </svg>
+                              <span class="hide-menu ml-3">Promotion Management</span></a>
+                          <ul aria-expanded="false" class="collapse  first-level ">
+                              <li class="sidebar-item"><a href="FixedDiscountProm.html" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> Fixed Discount </span></a></li>
+                              <li class="sidebar-item"><a href="giftCardProm.html" class="sidebar-link"><i class="mdi mdi-multiplication-box"></i><span class="hide-menu"> Gift Card </span></a></li>
+                              <li class="sidebar-item"><a href="discountonBill.html" class="sidebar-link"><i class="mdi mdi-calendar-check"></i><span class="hide-menu">Discount on Bill </span></a></li>
+                              <li class="sidebar-item"><a href="promotionalCode.html" class="sidebar-link"><i class="mdi mdi-bulletin-board"></i><span class="hide-menu">Promotional Codes </span></a></li>
+                              <li class="sidebar-item"><a href="voucherManagement.html" class="sidebar-link"><i class="mdi mdi-message-outline"></i><span class="hide-menu"> Voucher Management </span></a></li>
+                          </ul>
+                      </li>
+                      
+                  </ul>
+              </nav>
+              <!-- End Sidebar navigation -->
+          </div>
+          <!-- End Sidebar scroll-->
+      </aside>
 
         <div class="container breadAll">
           <div class="row">
